# MovieBoxAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
examples/: basic_usage.py
src/movieboxapi/: __init__.py  client.py  constants.py  crypto.py  exceptions.py  models.py  sportsnow.py  sportsnow_constants.py  utils.py
