[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movieboxapi"
version = "0.1.0"
description = "Python client library for the MovieBox streaming platform API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Putzx" },
]
keywords = [
    "moviebox",
    "streaming",
    "api",
    "movie",
    "tv-show",
    "aoneroom",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "httpx[socks]>=0.27.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/putzxdevs/MovieBoxAPI-Python"
Repository = "https://github.com/putzxdevs/MovieBoxAPI-Python"
Issues = "https://github.com/putzxdevs/MovieBoxAPI-Python/issues"
Documentation = "https://github.com/putzxdevs/MovieBoxAPI-Python#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/movieboxapi"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]